Release Notes

* 1/28/2019
  * added eshigh
  * prio boost for tasks with jumbo

* 1/17/2019
  * using nEventsReady for jumbo in AtlasPJB
  * not to count throttled jobs in nAct in AtlasAJB

* 1/15/2019
  * processingType=blah-cont for container based analysys
  * added USER_TASKS_MOVE_INPUT

* 12/21/2018
  * to use only MCORE for ES scouts

* 12/19/2018
  * to use only MCORE for ES with prio>=900

* 12/11/2018
  * disabled data locality check in AtlasAJB for taskPrio>=2000

* 12/3/2018
  * disabled IO intensity check when no candidate available permanently

* 11/29/2018
  * added correction to nPilot for resource shares
  * added release and nFiles checks to JumboWatchDog

* 11/26/2018
  * using 500kB for analysis outDiskCount
  * using 50GB for directIO maxSize

* 11/20/2018
  * using TAPE for IO intensity check in AtlasPJB

* 11/19/2018
  * added the second look in AtlasAJB to ignore data locality
  * set transient for finished+merged+100%

* 11/5/2018
  * using new task params for ES

* 10/24/2018
  * changed rerefine not to reset some attributes

* 10/22/2018
  * added proc_status

* 10/16/2018
  * added decAttOnFailedES

* 10/5/2018
  * added discardEvents in retryTask

* 9/24/2018
  * using resolve_archives=True in list_replicas

* 9/20/2018
  * added maxJumboPerSite

* 9/7/2018
  * added enableJumbo

* 7/23/2018
  * changed getScout to ignore nEvents<10*nCore
  * added HS06sPerEventFixed

* 7/19/2018
  * changed AtlasAJB to check cmtConfig for nightlies

* 7/17/2018
  * added orderByLB

* 7/16/2018
  * fixed maxWalltime and maxCpuCount for multiple consumers

* 5/23/2018
  * changed AtlasAJB for hospital

* 5/7/2018
  * excluding validation from *_AES for es conversion

* 4/25/2018
  * make IO intensity cutoff configurable

* 4/19/2018
  * using notDiscardEvents for ES tasks by default

* 4/16/2018
  * added minCpuEfficiency

* 3/20/2018
  * notDiscardEvents

* 3/14/2018
  * to reset NG

* 3/1/2018
  * added a protection against state change in DB
